--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -23,3 +23,27 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 }
+
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 24px;
+  max-width: 1128px;
+  margin: 24px auto;
+  align-items: center;
+  justify-content: center;
+}
+
+.gallery-image {
+  object-fit: cover;
+  display: block;
+  max-width: 100%;
+  height: 200px;
+  position: relative;
+  overflow: hidden;
+  transition: transform 0.3s ease-in-out;
+}
+
+.gallery-image:hover {
+  transform: scale(1.04);
+}
