--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -47,3 +47,102 @@
 .gallery-image:hover {
   transform: scale(1.04);
 }
+
+.feedback-form {
+  max-width: 408px;
+  max-height: 296px;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+
+}
+
+.feedback-form>label {
+  color: #2E2F42;
+  font-family: Montserrat;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px; /* 150% */
+  letter-spacing: 0.64px;
+  display: flex;
+  flex-direction: column;
+gap: 8px;
+}
+
+.feedback-form>label>input {
+  border-radius: 4px;
+  border: 1px solid #808080;
+  width: 360px;
+  height: 40px;
+  flex-shrink: 0;
+  color: #2E2F42;
+  font-family: Montserrat;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px; /* 150% */
+  letter-spacing: 0.64px;
+  transition: 600ms;
+}
+
+.feedback-form>label>textarea {
+  resize: none;
+  width: 360px;
+  height: 80px;
+  flex-shrink: 0;
+  border-radius: 4px;
+  border: 1px solid #808080;
+  color: #2E2F42;
+  font-family: Montserrat;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px; /* 150% */
+  letter-spacing: 0.64px;
+  transition: 600ms;
+}
+
+.feedback-form>label>textarea:hover,
+.feedback-form>label>input:hover {
+  border: 1px solid #000;
+}
+
+.feedback-form>label>textarea:focus, 
+.feedback-form>label>textarea:active,
+.feedback-form>label>input:focus,
+.feedback-form>label>input:active {
+  border: 1px solid #808080;
+}
+
+.feedback-form>button {
+  margin-top: 16px;
+  width: 95px;
+  display: flex;
+  padding: 8px 16px;
+  justify-content: center;
+  align-items: center;
+  border-radius: 8px;
+  border: none;
+  background: #4E75FF;
+  color: #FFF;
+  font-family: Montserrat;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 24px; /* 150% */
+  letter-spacing: 0.64px;
+  transition: 600ms;
+}
+
+.feedback-form>button:hover {
+ background-color: #6C8CFF;
+}
+
+.feedback-form:nth-last-child(1) {
+  display: flex;
+  justify-content: start;
+  align-items: start;
+}
